Dashboard/layout_update

--- a/Css/Base/Colors.css
+++ b/Css/Base/Colors.css
@@ -3,6 +3,7 @@
     --White: #f1f1f1;
     --Blue: #0077ff;
     --Green: #1eff00;
+    --Orange: #ffab0e;
     --Red: #FB2929;
     --Silver: #c0c0c0;
 }
