--- a/Css/Generic.css
+++ b/Css/Generic.css
@@ -1,78 +1,8 @@
 @import "Base/Reset.css";
 @import "Base/Colors.css";
+@import "Base/Scrollbar.css";
+@import "Base/Body.css";
+@import "Base/Headers.css";
+@import "Base/ContentContainers.css";
 
-body, html {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    background-color: var(--Black);
-}
-
-.header {
-    overflow: hidden;
-    background-color: var(--Black);
-    padding: 10px 8px;
-    border: none;
-    user-select: none;
-}
-
-.logo {
-    float: left;
-    color: var(--Blue);
-    padding: 12px;
-    text-align: center;
-    font-size: 25px;
-    font-weight: bold;
-    line-height: 25px;
-    text-decoration: none;
-    border-radius: 4px;
-}
-
-.content {
-    width: 100%;
-    height: 50.5rem;
-    background: none;
-    overflow: auto;
-    overflow-y: none;
-    border: none;
-}
-
-.search-form {
-    display: none;
-    float: right;
-    overflow: hidden;
-    background-color: var(--Black);
-    padding: 10px 8px;
-    border: none;
-}
-
-.toggle-search {
-    background-color: var(--Black);
-    color: var(--Blue);
-    text-align: center;
-    font-size: 1rem;
-    font-weight: bold;
-    border: 1px solid var(--Black);
-}
-
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: none;
-    z-index: 9;
-    border: none;
-}
-
-.footer-text {
-    margin: 0 auto;
-    font-size: 1rem;
-    font-weight: bold;
-    background: none;
-    color: var(--Blue);
-    text-align: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    user-select: none;
-}
+@import "Base/Footers.css";
