--- a/Css/Base/Headers.css
+++ b/Css/Base/Headers.css
@@ -1,13 +1,28 @@
 @import "Placeholders.css";
 
 .header {
-    display: flex;
-    justify-content: space-between;
+    float: left;
     width: 100%;
     margin: 0 auto;
     overflow: hidden;
     background-color: var(--Black);
     border: none;
+}
+
+.header-brand-logo-container {
+    float: left;
+    margin: 0 auto;
+    width: auto;
+    height: fit-content;
+}
+
+.header-brand-logo-image {
+    float: left;
+    margin: 0 auto;
+    margin-top: 0.25rem;
+    margin-left: 0.25rem;
+    width: 4rem;
+    height: 4rem;
 }
 
 .header-brand-logo {
@@ -21,7 +36,7 @@
 }
 
 .search-bar-container {
-    display: inline-block;
+    float: right;
     width: 30%;
     height: inherit;
     border-radius: 0.5rem;
@@ -97,7 +112,6 @@ Desktops/TVs */
     .header-brand-logo {
         float: left;
         padding: 0.25rem;
-        padding-left: 0.75rem;
         font-size: 3rem;
     }
 }
